[gd_scene load_steps=2 format=3 uid="uid://df6v8v5m1nkb7"]

[ext_resource type="Script" path="res://scripts/ui/main_menu.gd" id="1_sxa0c"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sxa0c")

[node name="Background" type="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.113725, 0.168627, 0.231373, 1)

[node name="Title" type="Label"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_top = 100.0
offset_bottom = 180.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 60
text = "Anime Chess"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -70.0
offset_right = 150.0
offset_bottom = 170.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="PlaySingleButton" type="Button"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugar vs IA"

[node name="PlayLocalButton" type="Button"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Jugar vs Humano"

[node name="SettingsButton" type="Button"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Configuraci√≥n"

[node name="QuitButton" type="Button"]
custom_minimum_size = Vector2(300, 60)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Salir"

[connection signal="pressed" from="VBoxContainer/PlaySingleButton" to="." method="_on_play_single_button_pressed"]
[connection signal="pressed" from="VBoxContainer/PlayLocalButton" to="." method="_on_play_local_button_pressed"]
[connection signal="pressed" from="VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
